--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,2 +1,14 @@
+// Import Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Import Fontawesome
+@import '~@fortawesome/fontawesome-free/css/all.css';
+// Import Variables.scss
 @import './variables.scss';
+// Import Font Roboto
+@import '~@fontsource/roboto/300.css';
+@import '~@fontsource/roboto/700.css';
+
+// COMMON
+body{
+    font-family: "Roboto", sans-serif;
+}
