Done LearnMore.vue

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -66,6 +66,10 @@ p{
     color: inherit;
     background-color: $primary_color;
 }
+.ms_btn-white{
+    color: white;
+    border: 1px solid white;
+}
 
 // Main
 main{
