--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -71,8 +71,9 @@ p{
     border: 1px solid white;
 }
 
-// Main
-main{
+// Main and Footer
+main,
+footer{
     p{
         line-height: 30px;
     }
