--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -25,6 +25,7 @@ img{
 ul{
     list-style-type: none;
     margin: 0;
+    padding: 0;
 }
 // A
 a{
@@ -70,7 +71,10 @@ p{
     color: white;
     border: 1px solid white;
 }
-
+.ms_btn-dark{
+    color: black;
+    border: 1px solid black;
+}
 // Main and Footer
 main,
 footer{
